Phase 1: Foundation and multi-monitor support
- Add TOML configuration parser with full support for all config options
- Implement Config class with monitor modes (all/primary/specific) and visibility modes
- Add Monitor wrapper class for screen information and hotplug support
- Implement DockWindow with QML content loading and per-monitor geometry
- Create UI components: DockPanel, IconButton, Tooltip with styling
- Add command-line timeout option for testing (-t/--timeout)
- Populate config_template.toml with all documented options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,4 @@ find_package(KF6WindowSystem REQUIRED)
 find_package(KF6Service REQUIRED)
 find_package(KF6Config REQUIRED)
 
-add_subdirectory(src);
+add_subdirectory(src)
