Add Wayland Layer-Shell Support and X11 Fallback
- Introduced LayerShellQt dependency in CMake configuration.
- Implemented Wayland layer-shell protocol for dock behavior in DockWindow.
- Added runtime detection for session type to configure dock for Wayland or X11.
- Implemented background blur effect using KWindowEffects for enhanced visual appearance.
- Updated documentation to reflect progress and next steps in development.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,5 +17,6 @@ find_package(Qt6 REQUIRED COMPONENTS
 find_package(KF6WindowSystem REQUIRED)
 find_package(KF6Service REQUIRED)
 find_package(KF6Config REQUIRED)
+find_package(LayerShellQt REQUIRED)
 
 add_subdirectory(src)
